Fix alignment for the checkout form on some themes.

--- a/css/checkout-layout-300-beta-1.css
+++ b/css/checkout-layout-300-beta-1.css
@@ -127,6 +127,7 @@ form.woocommerce-checkout {
 .fc-content form.woocommerce-checkout {
   clear: both;
   float: none;
+  margin: 0 !important;
 }
 
 .fc-content form.woocommerce-checkout:after {
